--- a/.gitmodules
+++ b/.gitmodules
@@ -19,7 +19,7 @@
 	path = fcci
 	url = https://github.com/vgherard/fcci
 	shallow = true
-	branch = *release
+	branch = v1.0.0
 	registered = true
 [submodule "gsample"]
 	path = gsample
