--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,13 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "fcci"]
+	path = fcci
+	url = https://github.com/vgherard/fcci
+	shallow = true
+	registered = true
+[submodule "sbo"]
+	path = sbo
+	url = https://github.com/vgherard/sbo
+	shallow = true
+	registered = true
