--- a/.gitmodules
+++ b/.gitmodules
@@ -30,7 +30,7 @@
 	path = r2r
 	url = https://github.com/vgherard/r2r
 	shallow = true
-	branch = *release
+	branch = v0.1.1
 	registered = true
 [submodule "scribblr"]
 	path = scribblr
