--- a/.gitmodules
+++ b/.gitmodules
@@ -30,9 +30,15 @@
 	path = r2r
 	url = https://github.com/vgherard/r2r
 	shallow = true
+	branch = *release
 	registered = true
 [submodule "scribblr"]
 	path = scribblr
 	url = https://github.com/vgherard/scribblr
+	shallow = true
+	registered = true
+[submodule "runiv"]
+	path = runiv
+	url = https://github.com/vgherard/runiv
 	shallow = true
 	registered = true
