--- a/.gitmodules
+++ b/.gitmodules
@@ -12,6 +12,7 @@
 [submodule "kgrams"]
 	path = kgrams
 	url = https://github.com/vgherard/kgrams
+	branch = *release
 [submodule "r2r"]
 	path = r2r
 	url = https://github.com/vgherard/r2r
